Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102832

Qt Linguist incorrectly translates some language names

XMLWordPrintable

    • Linux/X11
    • b30768f771 (qt/qttools/dev) b30768f771 (qt/tqtc-qttools/dev) febaa42be8 (qt/qttools/6.3) febaa42be8 (qt/tqtc-qttools/6.3) 97a63ed277 (qt/tqtc-qttools/5.15) 97a63ed277 (qt/tqtc-qttools/5.15.10) 83d5be0afe (qt/tqtc-qttools/6.2) febaa42be8 (qt/qttools/6.3.1)
    • Team A Foundation Sprint 56

      Qt Linguist settings dialog seems to translate many language names incorrectly, at least in some locales. Under Ukrainian locale many language names are translated as "українська", under German locale the translation is "Deutsch". I'm attaching a screenshot.

      My locale settings:

      % locale
      LANG=uk_UA.UTF-8
      LANGUAGE=uk:en_US
      LC_CTYPE="uk_UA.UTF-8"
      LC_NUMERIC="uk_UA.UTF-8"
      LC_TIME="uk_UA.UTF-8"
      LC_COLLATE="uk_UA.UTF-8"
      LC_MONETARY=nb_NO.UTF-8
      LC_MESSAGES="uk_UA.UTF-8"
      LC_PAPER="uk_UA.UTF-8"
      LC_NAME="uk_UA.UTF-8"
      LC_ADDRESS="uk_UA.UTF-8"
      LC_TELEPHONE="uk_UA.UTF-8"
      LC_MEASUREMENT="uk_UA.UTF-8"
      LC_IDENTIFICATION="uk_UA.UTF-8"
      LC_ALL=
      

        For Gerrit Dashboard: QTBUG-102832
        # Subject Branch Project Status CR V

            Eddy Edward Welbourne
            ievgenii.meshcheriakov Ievgenii Meshcheriakov
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes